--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:/data/demo
+spring.datasource.url=jdbc:h2:mem:demo
 spring.h2.console.enabled=true
 spring.datasource.username=sa
 spring.datasource.password=sa
